team-b/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: team-b
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    spec:
      imagePullSecrets:
        - name: hub.softleader.com.tw
      containers:
      - name: team-b
        image: "hub.softleader.com.tw/team-b:0.0.1-nanshan"
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
        livenessProbe:
          httpGet:
            path: /info
            port: 8080
          initialDelaySeconds: 60
        resources:
          requests:
            cpu: 0
            memory: 256Mi
          limits:
            cpu: 2
            memory: 1024Mi
