team-b/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: team-b
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /team-b
            backend:
              serviceName: team-b
              servicePort: 80
